<resources>
    <string name="app_name">Home Chef Rider</string>
    <string name="best_foot">Best food Delivery app</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">Login</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="get_started">Create New One</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="api_key">AIzaSyCblk_PoKh0JCPW49I2hw9l1hC2RtlLXHk</string>

    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="address">Address</string>
</resources>