<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.Registration">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/orange"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:layout_gravity="center">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/test1"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        style="@style/viewParent.headerText.NoMode"
                        android:textColor="@color/whiteTextColor"
                        android:text="Here’s\nyour first\nstep with \nus! "/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="200dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginStart="48dp"
                        android:layout_toEndOf="@+id/test1"
                        android:src="@drawable/back" />
                </RelativeLayout>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:cardBackgroundColor="@color/whiteTextColor"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="vertical">
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputName"
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin">
                            <EditText
                                android:id="@+id/editTextName"
                                style="@style/modifiedEditText"
                                android:inputType="textPersonName"
                                android:maxLines="1"
                                android:hint="Name"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputEmail"
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin">
                            <EditText
                                android:id="@+id/editTextEmail"
                                style="@style/modifiedEditText"
                                android:inputType="textEmailAddress"
                                android:maxLines="1"
                                android:hint="@string/login_email_hint"/>
                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputMobile"
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin">
                            <EditText
                                android:id="@+id/editTextMobile"
                                style="@style/modifiedEditText"
                                android:inputType="phone"
                                android:maxLines="1"
                                android:maxLength="13"
                                android:hint="Mobile Number"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputAddress"
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin">
                            <EditText
                                android:id="@+id/editTextAddress"
                                style="@style/modifiedEditText"
                                android:hint="@string/address"
                                android:inputType="text"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputPassword"
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin">
                            <EditText
                                android:id="@+id/editTextPassword"
                                style="@style/modifiedEditText"
                                android:hint="@string/login_password_hint"
                                android:maxLines="1"
                                android:inputType="textPassword"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                            android:id="@+id/cirRegisterButton"
                            style="@style/loginButton"
                            app:spinning_bar_width="4dp"
                            app:spinning_bar_color="#FFF"
                            android:text="Register"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/loginViewsMargin"
                            app:initialCornerAngle="27dp"
                            app:spinning_bar_padding="6dp"/>

                        <TextView
                            android:id="@+id/onLoginClick"
                            style="@style/parent"
                            android:textAlignment="center"
                            android:textStyle="bold"
                            android:textColor="@color/orange"
                            android:textSize="17sp"
                            android:text="Already have an account?"
                            android:layout_marginTop="@dimen/loginViewsMargin"/>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="12"
                    android:visibility="gone"
                    android:gravity="center"
                    android:layout_marginTop="30dp">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:background="@color/whiteTextColor"
                        android:layout_weight="3"/>

                    <TextView
                        style="@style/viewParent.headerText.NoMode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/whiteTextColor"
                        android:text="Use other Methods"
                        android:layout_weight="6"
                        android:textSize="12sp"
                        android:textAlignment="center"/>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:background="@color/whiteTextColor"
                        android:layout_weight="3"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:visibility="gone"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="30dp">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_facebook"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_google_plus"
                        android:layout_marginLeft="10dp"/>
                </LinearLayout>


            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</layout>
